gccida/c3/init_block_visualization
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_block_visualization/src/sched-vis.c:613:22: error: use of undeclared identifier 'arg0'
strcpy( visual_tbl, &arg0); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_block_visualization/src/obj/sched-vis.o] Error 1
